# aws-kr-startup-samples

./: .gitignore  README.md  REPO_ANALYSIS_REPORT.md
gen-ai/claude-code-proxy/backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
gen-ai/claude-code-proxy/backend/alembic/: env.py  script.py.mako
gen-ai/claude-code-proxy/backend/alembic/versions/: 001_initial_schema.py  002_cost_visibility_cost_fields.py  003_add_user_monthly_budget.py  004_add_user_routing_strategy.py  005_add_model_mappings_table.py  006_seed_default_model_mappings.py  007_add_provider_to_usage_aggregates.py  008_normalize_constraint_names.py
gen-ai/claude-code-proxy/backend/src/: __init__.py  config.py  logging.py  main.py
gen-ai/claude-code-proxy/backend/src/api/: __init__.py  admin_auth.py  admin_keys.py  admin_models.py  admin_pricing.py  admin_usage.py  admin_users.py  deps.py  proxy_router.py
gen-ai/claude-code-proxy/backend/src/db/: __init__.py  models.py  session.py
gen-ai/claude-code-proxy/backend/src/domain/: __init__.py  cost_calculator.py  entities.py  enums.py  pricing.py  schemas.py  types.py
gen-ai/claude-code-proxy/backend/src/proxy/: __init__.py  adapter_base.py  auth.py  bedrock_adapter.py  budget.py  cache.py  circuit_breaker.py  context.py  dependencies.py  metrics.py  model_mapping.py  plan_adapter.py  router.py  streaming_usage.py  thinking_normalizer.py  usage.py
gen-ai/claude-code-proxy/backend/src/repositories/: __init__.py  access_key_repository.py  bedrock_key_repository.py  model_mapping_repository.py  usage_repository.py  user_repository.py
gen-ai/claude-code-proxy/backend/src/security/: __init__.py  encryption.py  keys.py
gen-ai/claude-code-proxy/backend/tests/: conftest.py  test_admin_pricing.py  test_admin_usage.py  test_admin_users_budget.py  test_admin_users_routing_strategy.py  test_bedrock_adapter.py  test_bedrock_converse.py  test_budget_properties.py  test_budget_proxy_router.py  test_budget_service.py  test_cost_breakdown_repository.py  test_cost_calculator.py  test_db_models.py  test_metrics.py  test_model_mapping.py  test_pricing_config.py  test_proxy_count_tokens.py  test_proxy_messages_budget.py  test_proxy_messages_routing_strategy.py  test_proxy_router.py  test_streaming_usage.py  test_thinking_normalizer.py  test_time_range_resolution.py  test_usage_aggregate_repository.py  test_usage_buckets.py  test_usage_recorder.py  test_usage_recorder_integration.py
gen-ai/dashboard-agent/: Dockerfile  README.md  pyproject.toml
gen-ai/dashboard-agent/src/dashboard_agent/: __init__.py  analysis_tool.py  app.py  dashboard_agent.py  feedback_learning_agent.py  settings.py  tool_registry.py
gen-ai/mcp-tutorial/module-04/part-01/mcp-server-auth/: main.py  pyproject.toml  requirements.txt
observability/cloudwatch-metrics-mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml  uv-requirements.txt
observability/cloudwatch-metrics-mcp-server/src/: __init__.py
observability/cloudwatch-metrics-mcp-server/src/cloudwatch_metrics_mcp_server/: __init__.py  common.py  models.py  server.py
observability/observability-assistant/: .dockerignore  .env.template  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
observability/observability-assistant/cdk/: README.md  app.py  cdk.json  cleanup.sh  deploy.sh  observability_assistant_stack.py  requirements.txt
observability/observability-assistant/helm/observability-assistant/: Chart.yaml  README.md  values.yaml
observability/observability-assistant/helm/observability-assistant/templates/: NOTES.txt  _helpers.tpl  grafana-mcp-server-deployment.yaml  grafana-mcp-server-service.yaml  observability-assistant-deployment.yaml  observability-assistant-service.yaml  serviceaccount.yaml  tempo-mcp-server-deployment.yaml  tempo-mcp-server-service.yaml
observability/observability-assistant/mcp-servers/tempo-mcp-server/: .dockerignore  Dockerfile  README.md  go.mod  go.sum  overrides.yaml
observability/observability-assistant/src/observability_agent/: __init__.py
(+1313 files in other folders)
