[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-agent"
version = "0.1.0"
description = "A specialized AI-powered agent that helps analyze traces, logs, and metrics from observability platforms"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "strands-agents>=0.1.9",
    "strands-agents-tools",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "mcp>=0.1.0",
    "requests>=2.32.3",
    "streamlit>=1.32.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"