[project]
name = "mcp-weather-app"
version = "0.1.0"
description = "A working example to create a FastAPI server with SSE-based MCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "unicorn>=2.1.3",
]

[project.scripts]
start = "server:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app/mcp-weather-app"}